--- a/Resources/Public/Backend/Css/mixins.scss
+++ b/Resources/Public/Backend/Css/mixins.scss
@@ -1,6 +1,16 @@
-// _mixins.scss
 @mixin dark-mode {
+  // Expliziter Dark-Mode
   [data-color-scheme="dark"] & {
     @content;
+  }
+
+  // Auto-Modus mit System-Dark-Mode
+  @media (prefers-color-scheme: dark) {
+    [data-color-scheme="auto"] & {
+      @content;
+    }
+    [data-theme="auto"] & {
+      @content;
+    }
   }
 }
