[TASK] Layout for Setup-Configuration Steps

--- a/Resources/Private/Partials/BackendTabs/administration.html
+++ b/Resources/Private/Partials/BackendTabs/administration.html
@@ -15,7 +15,7 @@
                         Loading update index from remote API... <typo3-backend-spinner size="small"></typo3-backend-spinner>
                     </div>
                     <p>Check your Services with the latest Presets on coding-freaks.com </p>
-                    <button type="button" id="cf-start-update-check" data-cf-storage="{storageUID}" class="btn btn-primary">Check for Dataset API-Updates</button>
+                    <button type="button" id="cf-start-update-check" data-cf-endpoint="{constantsConfiguration.end_point}" data-cf-storage="{storageUID}" class="btn btn-primary">Check for Dataset API-Updates</button>
             </div>
 
             <div id="cf-api-database-update-list">
