--- a/Resources/Public/Backend/Css/BackendModal.css
+++ b/Resources/Public/Backend/Css/BackendModal.css
@@ -4,14 +4,14 @@
   padding: 20px;
 }
 [data-color-scheme=dark] .cf-cookiemanager-changes-modal-listitem {
-  background: #606060;
+  background: #4D4D4D;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-cookiemanager-changes-modal-listitem {
-    background: #606060;
+    background: #4D4D4D;
   }
   [data-theme=auto] .cf-cookiemanager-changes-modal-listitem {
-    background: #606060;
+    background: #4D4D4D;
   }
 }
 .cf-cookiemanager-changes-modal-listitem strong {
