--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -255,7 +255,7 @@ table.dataTable {
 .edit-icon-white {
   padding-bottom: 5px;
 }
-
+/*
 .cf-cookiemanager-alert {
   font-size: 1rem;
   color: $text-light;
@@ -269,6 +269,7 @@ table.dataTable {
     color: $text-dark;
   }
 }
+*/
 
 .cf-tutorial-section {
   background-color: $background-light;
