--- a/Resources/Public/Backend/Css/variables.scss
+++ b/Resources/Public/Backend/Css/variables.scss
@@ -1,11 +1,17 @@
 $background-light: #EBEBEB;
 $background-dark: #333;
 $background-lighter: #d2d2d2;
-$background-darker: #606060;
+$background-darker: #4D4D4D;
 $text-light: #4B4B4B;
 $text-dark: #fff;
 $border-light: rgba(197, 221, 243, 0.61);
 $border-dark: #444;
+
+$tab-gray-active: #2F2F2F;
+$tab-gray: #4D4D4D;
+$tab-gray-light: #d2d2d2;
+$tab-gray-light-active: #aeaeae;
+
 
 $highlight: #9BB51C;
 $highlight-dark: #3f4c00;
