--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -1,37 +1,109 @@
+.startConfigurationOffline {
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+#cf-welcome-screen {
+  background: #d2d2d2;
+  color: #4B4B4B;
+  padding: 20px;
+}
+[data-color-scheme=dark] #cf-welcome-screen {
+  background: #4D4D4D;
+  color: #fff;
+}
+@media (prefers-color-scheme: dark) {
+  [data-color-scheme=auto] #cf-welcome-screen {
+    background: #4D4D4D;
+    color: #fff;
+  }
+  [data-theme=auto] #cf-welcome-screen {
+    background: #4D4D4D;
+    color: #fff;
+  }
+}
+
 .cf-onboarding-container .cf-onboarding-progress {
   display: flex;
+  gap: 10px;
+  background: #d2d2d2;
+  color: #4B4B4B;
+  padding: 20px;
+  padding: 5px;
+  border-radius: 8px;
+}
+[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-progress {
+  background: #4D4D4D;
+  color: #fff;
+}
+@media (prefers-color-scheme: dark) {
+  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-progress {
+    background: #4D4D4D;
+    color: #fff;
+  }
+  [data-theme=auto] .cf-onboarding-container .cf-onboarding-progress {
+    background: #4D4D4D;
+    color: #fff;
+  }
 }
 .cf-onboarding-container .cf-onboarding-progress .cf-step {
-  padding: 20px;
+  display: flex;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 1rem;
   background: #d2d2d2;
+  color: #4B4B4B;
+  font-weight: bold;
+  border: 1px solid #868686;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-progress .cf-step {
-  background: #333;
+  background: #4D4D4D;
+  color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-progress .cf-step {
-    background: #333;
+    background: #4D4D4D;
+    color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-progress .cf-step {
-    background: #333;
+    background: #4D4D4D;
+    color: #fff;
   }
 }
+.cf-onboarding-container .cf-onboarding-progress .cf-step .cf-step-icon-notsuccess {
+  margin-left: 10px;
+  display: block;
+}
+.cf-onboarding-container .cf-onboarding-progress .cf-step .cf-step-icon-success {
+  margin-left: 10px;
+  display: none;
+}
 .cf-onboarding-container .cf-onboarding-progress .cf-step.active {
-  background: #d2d2d2;
+  background: #aeaeae;
+  color: #4B4B4B;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-progress .cf-step.active {
-  background: #606060;
+  background: #2F2F2F;
+  color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-progress .cf-step.active {
-    background: #606060;
+    background: #2F2F2F;
+    color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-progress .cf-step.active {
-    background: #606060;
+    background: #2F2F2F;
+    color: #fff;
   }
 }
 .cf-onboarding-container .cf-onboarding-progress .cf-step.completed {
   background: #9BB51C;
+}
+.cf-onboarding-container .cf-onboarding-progress .cf-step.completed .cf-step-icon-notsuccess {
+  display: none;
+}
+.cf-onboarding-container .cf-onboarding-progress .cf-step.completed .cf-step-icon-success {
+  display: block;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-progress .cf-step.completed {
   background: #3f4c00;
@@ -44,28 +116,111 @@
     background: #3f4c00;
   }
 }
+.cf-onboarding-container .cf-onboarding-content {
+  /*
+      .cf-feature-table {
+        table {
+          width: 100%;
+          border-collapse: collapse;
+          margin-bottom: 1em;
+        }
+
+        th,
+        td {
+          padding: 0.75em;
+          text-align: left;
+          border-bottom: 1px solid #dee2e6;
+        }
+
+        th {
+          background: #2F2F2F;
+          color: $text-dark;
+
+          @include dark-mode {
+            background: #2F2F2F;
+            color: $text-dark;
+          }
+          font-weight: bold;
+        }
+
+        tbody tr:last-child td {
+          border-bottom: none;
+        }
+
+        .text-center {
+          text-align: center;
+        }
+
+        .feature-description {
+          display: block;
+          font-size: 0.8em;
+          color: $text-light;
+
+          @include dark-mode {
+            color: $text-dark;
+          }
+        }
+      }
+  */
+}
 .cf-onboarding-container .cf-onboarding-content .cf-step-content {
   padding: 20px;
+  margin-top: 20px;
   display: none;
+  border-radius: 8px;
   background: #d2d2d2;
   color: #4B4B4B;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-step-content {
-  background: #606060;
+  background: #4D4D4D;
   color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-step-content {
-    background: #606060;
+    background: #4D4D4D;
     color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-step-content {
-    background: #606060;
+    background: #4D4D4D;
     color: #fff;
   }
 }
 .cf-onboarding-container .cf-onboarding-content .cf-step-content.active {
   display: block;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(197, 221, 243, 0.61);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header h2 {
+  font-size: 1.2rem;
+  margin: 0;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header h2 span {
+  font-size: 0.8rem;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header .cf-step-header-alert {
+  padding: 5px 10px;
+  border-radius: 8px;
+  background: #666666;
+  color: #fff;
+}
+[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header .cf-step-header-alert {
+  background: #666666;
+  color: #fff;
+}
+@media (prefers-color-scheme: dark) {
+  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header .cf-step-header-alert {
+    background: #666666;
+    color: #fff;
+  }
+  [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-step-content .cf-step-header .cf-step-header-alert {
+    background: #666666;
+    color: #fff;
+  }
 }
 .cf-onboarding-container .cf-onboarding-content .form-group {
   margin-bottom: 15px;
@@ -97,30 +252,32 @@
   display: flex;
   gap: 20px;
   margin-top: 15px;
+  margin-bottom: 15px;
 }
 .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option {
   display: flex;
   align-items: center;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 5px;
-  padding: 10px;
   cursor: pointer;
+  background: #174482;
+  color: #fff;
 }
 .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option:hover {
-  background: #d2d2d2;
-  color: #4B4B4B;
+  background: #174482;
+  color: #fff;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option:hover {
-  background: #606060;
+  background: #174482;
   color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option:hover {
-    background: #606060;
+    background: #174482;
     color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option:hover {
-    background: #606060;
+    background: #174482;
     color: #fff;
   }
 }
@@ -138,79 +295,89 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding: 10px;
+  margin: 0;
 }
 .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option input[type=radio]:checked + label {
   font-weight: bold;
+  border: solid 1px #9BB51C;
 }
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 1em;
+[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option input[type=radio]:checked + label {
+  border: solid 1px #9BB51C;
 }
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table th,
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table td {
-  padding: 0.75em;
-  text-align: left;
+@media (prefers-color-scheme: dark) {
+  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option input[type=radio]:checked + label {
+    border: solid 1px #9BB51C;
+  }
+  [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-consent-options .cf-consent-option input[type=radio]:checked + label {
+    border: solid 1px #9BB51C;
+  }
+}
+.cf-onboarding-container .cf-onboarding-content .cf-feature-table-flex {
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-feature-row {
+  display: flex;
   border-bottom: 1px solid #dee2e6;
 }
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table th {
-  background: #d2d2d2;
-  color: #4B4B4B;
-  font-weight: bold;
-}
-[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-feature-table th {
-  background: #606060;
-  color: #fff;
-}
-@media (prefers-color-scheme: dark) {
-  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-feature-table th {
-    background: #606060;
-    color: #fff;
-  }
-  [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-feature-table th {
-    background: #606060;
-    color: #fff;
-  }
-}
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table tbody tr:last-child td {
+.cf-onboarding-container .cf-onboarding-content .cf-feature-row:last-child {
   border-bottom: none;
 }
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table .text-center {
-  text-align: center;
-}
-.cf-onboarding-container .cf-onboarding-content .cf-feature-table .feature-description {
-  display: block;
-  font-size: 0.8em;
-  color: #4B4B4B;
-}
-[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-feature-table .feature-description {
+.cf-onboarding-container .cf-onboarding-content .cf-feature-header {
+  background: #2F2F2F;
   color: #fff;
+  padding: 10px 0;
+  border-radius: 8px;
+  font-weight: bold;
+  border: none;
 }
-@media (prefers-color-scheme: dark) {
-  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-feature-table .feature-description {
-    color: #fff;
+.cf-onboarding-container .cf-onboarding-content .cf-feature-cell {
+  padding: 0.75em;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-feature-name {
+  flex: 3;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-feature-api, .cf-onboarding-container .cf-onboarding-content .cf-feature-no-api {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cf-onboarding-container .cf-onboarding-content .cf-feature-row {
+    flex-direction: column;
   }
-  [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-feature-table .feature-description {
-    color: #fff;
+  .cf-onboarding-container .cf-onboarding-content .cf-feature-api, .cf-onboarding-container .cf-onboarding-content .cf-feature-no-api {
+    padding-left: 1.5em;
+    justify-content: flex-start;
+  }
+  .cf-onboarding-container .cf-onboarding-content .cf-feature-header .cf-feature-api,
+  .cf-onboarding-container .cf-onboarding-content .cf-feature-header .cf-feature-no-api {
+    display: none;
   }
 }
 .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser {
-  background: #d2d2d2;
-  color: #4B4B4B;
+  background: #aeaeae;
+  color: #fff;
   border-radius: 5px;
   margin-bottom: 20px;
+  padding: 20px;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser {
-  background: #606060;
+  background: #2F2F2F;
   color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser {
-    background: #606060;
+    background: #2F2F2F;
     color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser {
-    background: #606060;
+    background: #2F2F2F;
     color: #fff;
   }
 }
@@ -223,13 +390,26 @@
 }
 .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list {
   display: flex;
-  flex-direction: column;
   gap: 10px;
+}
+.cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item {
+  border-radius: 8px;
+  background: #4D4D4D;
+}
+[data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item {
+  background: #4D4D4D;
+}
+@media (prefers-color-scheme: dark) {
+  [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item {
+    background: #4D4D4D;
+  }
+  [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item {
+    background: #4D4D4D;
+  }
 }
 .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item a {
   display: block;
   padding: 15px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   text-decoration: none;
   color: inherit;
@@ -245,17 +425,18 @@
 .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item a .cf-tutorial-description {
   display: block;
   font-size: 0.9em;
-  color: #6c757d;
+  color: #fff;
+  margin-bottom: 10px;
 }
 [data-color-scheme=dark] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item a .cf-tutorial-description {
-  color: #999;
+  color: #fff;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item a .cf-tutorial-description {
-    color: #999;
+    color: #fff;
   }
   [data-theme=auto] .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-tutorial-list .cf-tutorial-item a .cf-tutorial-description {
-    color: #999;
+    color: #fff;
   }
 }
 .cf-onboarding-container .cf-onboarding-content .cf-tutorial-teaser .cf-final-notice {
@@ -277,6 +458,8 @@
 .cf-onboarding-container .cf-onboarding-actions {
   margin-top: 20px;
   text-align: right;
+  display: flex;
+  justify-content: space-between;
 }
 .cf-onboarding-container .cf-onboarding-actions button {
   margin-left: 10px;
@@ -595,31 +778,21 @@ table.dataTable {
   padding-bottom: 5px;
 }
 
+/*
 .cf-cookiemanager-alert {
   font-size: 1rem;
-  color: #4B4B4B;
+  color: $text-light;
   padding: 35px;
-  background-color: #EBEBEB;
-  border-color: rgba(197, 221, 243, 0.61);
-}
-[data-color-scheme=dark] .cf-cookiemanager-alert {
-  background-color: #333;
-  border-color: #444;
-  color: #fff;
-}
-@media (prefers-color-scheme: dark) {
-  [data-color-scheme=auto] .cf-cookiemanager-alert {
-    background-color: #333;
-    border-color: #444;
-    color: #fff;
-  }
-  [data-theme=auto] .cf-cookiemanager-alert {
-    background-color: #333;
-    border-color: #444;
-    color: #fff;
-  }
-}
+  background-color: $background-light;
+  border-color: $border-light;
 
+  @include dark-mode {
+    background-color: $background-dark;
+    border-color: $border-dark;
+    color: $text-dark;
+  }
+}
+*/
 .cf-tutorial-section {
   background-color: #EBEBEB;
   border-radius: 5px;
@@ -949,16 +1122,16 @@ table.dataTable {
 }
 [data-color-scheme=dark] .cf-cookiemanager-language {
   border-color: #fff;
-  background: #606060;
+  background: #4D4D4D;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-cookiemanager-language {
     border-color: #fff;
-    background: #606060;
+    background: #4D4D4D;
   }
   [data-theme=auto] .cf-cookiemanager-language {
     border-color: #fff;
-    background: #606060;
+    background: #4D4D4D;
   }
 }
 .cf-cookiemanager-language .cf-cookiemanager-language-inner {
@@ -1008,14 +1181,14 @@ table.dataTable {
   border-color: #d2d2d2;
 }
 [data-color-scheme=dark] .cf-cookiemanager-change-list-item {
-  border-color: #606060;
+  border-color: #4D4D4D;
 }
 @media (prefers-color-scheme: dark) {
   [data-color-scheme=auto] .cf-cookiemanager-change-list-item {
-    border-color: #606060;
+    border-color: #4D4D4D;
   }
   [data-theme=auto] .cf-cookiemanager-change-list-item {
-    border-color: #606060;
+    border-color: #4D4D4D;
   }
 }
 .cf-cookiemanager-change-list-item:last-child {
