--- a/Resources/Public/Backend/Css/OnboardingTabs.scss
+++ b/Resources/Public/Backend/Css/OnboardingTabs.scss
@@ -1,27 +1,75 @@
+.startConfigurationOffline{
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+
+#cf-welcome-screen{
+  background: $tab-gray-light;
+  color: $text-light;
+  padding: 20px;
+  @include dark-mode {
+    background: $tab-gray;
+    color: $text-dark;
+  }
+}
+
 .cf-onboarding-container {
 
   .cf-onboarding-progress {
     display: flex;
-
+    gap: 10px;
+    background: $tab-gray-light;
+    color: $text-light;
+    padding: 20px;
+    @include dark-mode {
+      background: $tab-gray;
+      color: $text-dark;
+    }
+    padding: 5px;
+    border-radius: 8px;
     .cf-step {
-      padding: 20px;
-      background: $background-lighter;
-
+      display: flex;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 1rem;
+      background: $tab-gray-light;
+      color: $text-light;
       @include dark-mode {
-        background: $background-dark;
+        background: $tab-gray;
+        color: $text-dark;
+      }
+      font-weight: bold;
+      border: 1px solid #868686;
+      .cf-step-icon-notsuccess{
+        margin-left: 10px;
+        display: block;
+      }
+
+      .cf-step-icon-success{
+        margin-left: 10px;
+        display: none;
       }
 
       &.active {
-        background: $background-lighter;
-
+        background: $tab-gray-light-active;
+        color: $text-light;
         @include dark-mode {
-          background: $background-darker;
+          background: $tab-gray-active;
+          color: $text-dark;
         }
       }
 
       &.completed {
         background: $highlight;
 
+        .cf-step-icon-notsuccess{
+          display: none;
+        }
+
+        .cf-step-icon-success{
+          display: block;
+        }
         @include dark-mode {
           background: $highlight-dark;
         }
@@ -32,7 +80,9 @@
   .cf-onboarding-content {
     .cf-step-content {
       padding: 20px;
+      margin-top: 20px;
       display: none;
+      border-radius: 8px;
       background: $background-lighter;
       color: $text-light;
 
@@ -44,6 +94,36 @@
       &.active {
         display: block;
       }
+
+      .cf-step-header{
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid $border-light;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        h2{
+          font-size: 1.2rem;
+          margin: 0;
+          span{
+            font-size: 0.8rem;
+
+          }
+        }
+
+        .cf-step-header-alert{
+          padding: 5px 10px;
+          border-radius: 8px;
+          background: #666666;
+          color: $text-dark;
+          @include dark-mode {
+            background: #666666;
+            color: $text-dark;
+          }
+
+        }
+
+      }
+
     }
 
     .form-group {
@@ -80,21 +160,23 @@
       display: flex;
       gap: 20px;
       margin-top: 15px;
+      margin-bottom: 15px;
 
       .cf-consent-option {
         display: flex;
         align-items: center;
-        border: 1px solid #ccc;
+        border: none;
         border-radius: 5px;
-        padding: 10px;
         cursor: pointer;
+        background: #174482;
+        color: $text-dark;
 
         &:hover {
-          background: $background-lighter;
-          color: $text-light;
+          background: #174482;
+          color: $text-dark;
 
           @include dark-mode {
-            background: $background-darker;
+            background: #174482;
             color: $text-dark;
           }
         }
@@ -116,19 +198,21 @@
           display: flex;
           align-items: center;
           cursor: pointer;
+          padding: 10px;
+          margin: 0;
         }
 
         input[type="radio"]:checked + label {
           font-weight: bold;
+          border: solid 1px $highlight;
+          @include dark-mode {
+            border: solid 1px $highlight;
+          }
         }
-
-
       }
-
-
     }
 
-
+/*
     .cf-feature-table {
       table {
         width: 100%;
@@ -144,11 +228,11 @@
       }
 
       th {
-        background: $background-lighter;
-        color: $text-light;
+        background: #2F2F2F;
+        color: $text-dark;
 
         @include dark-mode {
-          background: $background-darker;
+          background: #2F2F2F;
           color: $text-dark;
         }
         font-weight: bold;
@@ -172,16 +256,83 @@
         }
       }
     }
+*/
+
+//===
+
+
+    .cf-feature-table-flex {
+      display: flex;
+      flex-direction: column;
+      border-radius: 4px;
+      overflow: hidden;
+      margin-bottom: 20px;
+    }
+
+    .cf-feature-row {
+      display: flex;
+      border-bottom: 1px solid #dee2e6;
+    }
+
+    .cf-feature-row:last-child {
+      border-bottom: none;
+    }
+
+    .cf-feature-header {
+      background: #2F2F2F;
+      color: #fff;
+      padding: 10px 0;
+      border-radius: 8px;
+      font-weight: bold;
+      border: none;
+    }
+
+    .cf-feature-cell {
+      padding: 0.75em;
+    }
+
+    .cf-feature-name {
+      flex: 3;
+    }
+
+    .cf-feature-api, .cf-feature-no-api {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    @media (max-width: 768px) {
+      .cf-feature-row {
+        flex-direction: column;
+      }
+
+      .cf-feature-api, .cf-feature-no-api {
+        padding-left: 1.5em;
+        justify-content: flex-start;
+      }
+
+      .cf-feature-header .cf-feature-api,
+      .cf-feature-header .cf-feature-no-api {
+        display: none;
+      }
+    }
+
+
+    //===
+
+
+
 
 
     .cf-tutorial-teaser {
-      background: $background-lighter;
-      color: $text-light;
+      background: $tab-gray-light-active;
+      color: $text-dark;
       border-radius: 5px;
       margin-bottom: 20px;
-
+      padding: 20px;
       @include dark-mode {
-        background: $background-darker;
+        background: $tab-gray-active;
         color: $text-dark;
       }
 
@@ -196,14 +347,17 @@
 
       .cf-tutorial-list {
         display: flex;
-        flex-direction: column;
         gap: 10px;
 
         .cf-tutorial-item {
+          border-radius: 8px;
+          background: $tab-gray;
+          @include dark-mode {
+            background: $tab-gray;
+          }
           a {
             display: block;
             padding: 15px;
-            border: 1px solid #ccc;
             border-radius: 5px;
             text-decoration: none;
             color: inherit;
@@ -221,10 +375,11 @@
             .cf-tutorial-description {
               display: block;
               font-size: 0.9em;
-              color: #6c757d;
+              color: $text-dark;
+              margin-bottom: 10px;
 
               @include dark-mode {
-                color: #999;
+                color:$text-dark;
               }
             }
           }
@@ -248,6 +403,8 @@
   .cf-onboarding-actions {
     margin-top: 20px;
     text-align: right;
+    display: flex;
+    justify-content: space-between;
 
     button {
       margin-left: 10px;
