--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -30,7 +30,7 @@
                         <label for="limit"><strong>Max pages</strong></label>
                         <f:form.textfield type="number" placeholder="Max Pages to Scan, default: 10"  style="width:400px;" class="form-control" value="10" id="limit" name="limit"></f:form.textfield>
                         <span class="form-text">
-                             <a target="_blank" href="https://coding-freaks.com/register">Max Pages to Scan, default: 10, extend limit by entering an Free API Key in Extension Settings</a>
+                             <a target="_blank" href="https://coding-freaks.com/register">Max Pages to Scan, default: 10, extend limit by entering an Free API Key in SiteSet or Constants Settings</a>
                         </span>
                     </div>
                     <br>
