[TASK] Deprecation of Typo3 12 / Preparing 1.9

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -67,7 +67,7 @@
                                             data-cf-endpoint="{typoScriptConfig.end_point}" data-cf-storage="{storageUID}">Start Configuration <span class="badge">(Recomended)</span>
                                     </button>
 
-                                    <a class="btn btn-secondary openConfigurationOffline" data-cf-storage="{storageUID}">Offline Configuration <span class="badge">(Intranet or closed networks)</span></a>
+                                    <a class="btn btn-secondary openConfigurationOffline" data-cf-storage="{storageUID}">Offline Configuration <span class="badge">(Intranet or strict network policy)</span></a>
 
 
                                 </div>
@@ -166,7 +166,7 @@
 
                                             </div>
                                             <p>
-                                                To optimally utilize our API services and prevent spam, these features will soon be exclusively available to API users.<br>
+                                                To optimally use the Extension and our API services, these features are exclusively available to API users (Free).<br>
                                                 Sign up now for a free Open-Beta account on <a target="_blank" href="https://coding-freaks.com/register">Coding-Freaks</a> to get the most out of the Cookiemanager Extension!
                                             </p>
 
