[TASK] Migrate to Typo3 14.0 dev

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -119,9 +119,9 @@
                                                     <li> What we collect: Insights on how the extension is used in the Backend
                                                         (Only this Extension Module).
                                                     </li>
-                                                    <li> How we collect: We use a Thirdparty-Service called <a target="_blank"
-                                                                                                               href="https://clarity.microsoft.com/">MS-Clarity</a>
-                                                        hosted in the USA by Mircosoft.
+                                                    <li> How we collect: We use a OpenTelemetry-Service called <a target="_blank"
+                                                                                                               href="https://opentelemetry.io/">OpenTelemetry</a>
+                                                        hosted in Europe by CodingFreaks.
                                                     </li>
                                                     <li> Why we collect it: To improve performance, user experience, and develop
                                                         new features or find usage bugs.
@@ -148,7 +148,7 @@
                                                     </div>
                                                 </div>
 
-                                            <p>* By Opt-In you confirm the    <a class="text-decoration-underline" target="_blank" href="https://clarity.microsoft.com/terms"> Global-Terms of Ms-Clarity</a></p>
+                                            <p>* By Opt-In you confirm the    <a class="text-decoration-underline" target="_blank" href="https://coding-freaks.com/privacy"> Global-Terms of CodingFreaks</a></p>
 
 
                                             </div>
