[TASK] Backend Namespaces for Fluid Templates

--- a/Resources/Private/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Partials/BackendTabs/categories.html
@@ -1,4 +1,8 @@
-
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true"
+>
 <div class=" t3js-module-body">
     <div class="row">
         <div class="card-header">
@@ -38,3 +42,5 @@
         </div>
     </div>
 </div>
+
+</html>
