--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -1,3 +1,8 @@
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true"
+>
 
 <!-- Refactor this to a Modal Based Scan interface, with a new UI, and a better management and understanding -->
 <div class=" t3js-module-body">
@@ -187,6 +192,7 @@
     </div>
 </div>
 
+</html>
 
 
 
