--- a/Resources/Private/Partials/BackendTabs/services.html
+++ b/Resources/Private/Partials/BackendTabs/services.html
@@ -1,3 +1,8 @@
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true"
+>
 
 
 
@@ -41,3 +46,6 @@
         </div>
     </div>
 </div>
+
+
+</html>
