[TASK] Refactoring Data Handling and AutoConfiguration and UI States

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -111,12 +111,12 @@
                                                 <p>
                                                     We continuously strive to make our cookie manager better.<br>
                                                     To do this, we kindly ask for your permission to collect usage data during
-                                                    installation and while using the extension in the Backend.<br>
+                                                    installation and while using the extension.<br>
                                                 </p>
 
 
                                                 <ul>
-                                                    <li> What we collect: Insights on how the extension is used in the Backend
+                                                    <li> What we collect: Insights on how the extension is used and collecting runtime errors.
                                                         (Only this Extension Module).
                                                     </li>
                                                     <li> How we collect: We use a OpenTelemetry-Service called <a target="_blank"
@@ -127,7 +127,7 @@
                                                         new features or find usage bugs.
                                                     </li>
                                                     <li> Your privacy matters: These data are used exclusively to improve the
-                                                        extension helping us understand Users.
+                                                        extension helping us understand Usage.
                                                     </li>
                                                 </ul>
 
@@ -224,7 +224,7 @@
                                                 <div class="cf-feature-row">
                                                     <div class="cf-feature-cell cf-feature-name">
                                                         <p class="fw-bold m-0">Shared Local Config</p>
-                                                        <span class="feature-description">Share your Locale cookie & service config with our Cookie-Scanner to classify "unknown" services from your Typo3 Backend to the Scanner</span>
+                                                        <span class="feature-description">Share your locale cookie & service config with our Cookie-Scanner to classify "unknown" services from your Typo3 Backend to the Scanner</span>
                                                     </div>
                                                     <div class="cf-feature-cell cf-feature-api text-center">
                                                         <core:icon identifier="actions-check-badge-alt" size="small"/>
